--- a/NotesApi/NotesAPi/appsettings.Development.json
+++ b/NotesApi/NotesAPi/appsettings.Development.json
@@ -5,5 +5,18 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+
+  "MongoDBSettings": {
+    "NoteCollectionName": "Note",
+   // "OwnerCollectionName": "Owner",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "notes"
+  },
+
+
+
 }
+
+
