--- a/NotesApi/NotesAPi/appsettings.json
+++ b/NotesApi/NotesAPi/appsettings.json
@@ -1,4 +1,5 @@
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +7,22 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MongoDBSettings": {
+    //"NoteCollectionName": {
+    //  "NoteCollection": "Note",
+    //  "OwnerCollection": "Owner"
+    //},
+    "NoteCollectionName": "Note",
+   // "OwnerCollectionName": "Owner",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "notes"
+  },
+
+  //"MongoDBSettingsForOwner": {
+  //  "NoteCollectionName": "Owner",
+  //  "ConnectionString": "mongodb://localhost:27017",
+  //  "DatabaseName": "notes"
+  //}
 }
