Deleted duplicate Category class. Fixed build.

--- a/NotesApi/NotesAPi/Properties/launchSettings.json
+++ b/NotesApi/NotesAPi/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52729",
-      "sslPort": 44379
+      "applicationUrl": "http://localhost:52729"
     }
   },
   "profiles": {
