Appsettings.development changed Owner collection name.

--- a/NotesApi/NotesAPi/appsettings.Development.json
+++ b/NotesApi/NotesAPi/appsettings.Development.json
@@ -10,7 +10,7 @@
 
   "MongoDBSettings": {
     "NoteCollectionName": "Note",
-    "OwnerCollectionName": "Owners",
+    "OwnerCollectionName": "Owner",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "notes"
   },
