--- a/NotesApi/NotesAPi/NotesAPi.csproj
+++ b/NotesApi/NotesAPi/NotesAPi.csproj
@@ -11,6 +11,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.14.0-beta1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
