--- a/NotesApi/NotesAPi/Properties/launchSettings.json
+++ b/NotesApi/NotesAPi/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "NotesAPi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:60000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
