--- a/NotesApi/NotesAPi/appsettings.Development.json
+++ b/NotesApi/NotesAPi/appsettings.Development.json
@@ -10,13 +10,10 @@
 
   "MongoDBSettings": {
     "NoteCollectionName": "Note",
-   // "OwnerCollectionName": "Owner",
+    "OwnerCollectionName": "Owner",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "notes"
-  },
-
-
-
+  }
 }
 
 
